// Copyright (c) 2019 Arista Networks, Inc.
// Use of this source code is governed by the Apache License 2.0
// that can be found in the COPYING file.

syntax = "proto3";

package arista.cloudvision;

option go_package = "github.com/aristanetworks/cloudvision-go/device/gen";

message DeviceConfig {
   map<string, string> options = 1;
   string deviceType = 2;
}

// DeviceConfigs is used to marshal a list of DeviceConfig in a config file as
// protobuf doesn't support top level list type.
message DeviceConfigs {
   repeated DeviceConfig deviceConfigs = 1;
}

message DeviceInfo {
   // deviceConfig is empty if the device is created without using DeviceConfig.
   DeviceConfig deviceConfig = 1;
   string deviceID = 2;
}

message AddRequest {
   DeviceConfig deviceConfig = 1;
}

message AddResponse {
   DeviceInfo deviceInfo = 1;
}

message DeleteRequest {
   string deviceID = 1;
}

message DeleteResponse {}

message GetRequest {
   string deviceID = 1;
}

message GetResponse {
   DeviceInfo deviceInfo = 1;
}

message ListRequest {}

message ListResponse {
   repeated DeviceInfo deviceInfos = 1;
}

service DeviceInventory {

  rpc Add(AddRequest) returns (AddResponse);

  rpc Delete(DeleteRequest) returns (DeleteResponse);

  rpc Get(GetRequest) returns (GetResponse);

  rpc List(ListRequest) returns (ListResponse);
}
